Use "file" scheme absolute URIs for "Class-Path" entries we create in the MANIFEST.MF of our -dev.jar
    Discussion about the semantics of this Class-Path attributes can be found at https://mail.openjdk.java.net/pipermail/core-libs-dev/2019-November/063491.html